<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sfvtech.payperview.admin.AdminActivity">

    <TextView
        android:id="@+id/title_data_upload"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:text="@string/data_upload_title" />

    <TableLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:stretchColumns="1">

        <TableRow>
            <TextView style="@style/TableCell"
                android:layout_column="1"
                android:text="@string/records_to_upload_label" />

            <TextView
                android:id="@+id/records_to_upload_value"
                style="@style/TableCell"
                android:text="@string/records_to_upload_value" />
        </TableRow>
        <TableRow>
            <TextView style="@style/TableCell"
                android:layout_column="1"
                android:text="@string/network_status_label" />

            <TextView
                android:id="@+id/network_status_value"
                style="@style/TableCell"
                android:text="@string/network_status_offline" />
        </TableRow>
        <TableRow>
            <TextView style="@style/TableCell"
                android:layout_column="1"
                android:text="@string/server_status_label" />

            <TextView
                android:id="@+id/server_status_value"
                style="@style/TableCell"
                android:text="@string/server_status_offline" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/uploadButton"
            style="@style/AdminButton"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="uploadData"
            android:text="@string/upload_button" />
        <Button
            android:id="@+id/adminCancelButton"
            style="@style/AdminButton"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="handleCancel"
            android:text="@string/admin_cancel_button" />
    </LinearLayout>

</RelativeLayout>
