<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.nullhammer.android.viewersurvey.ViewerNumberActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            style="@style/TitleText"
            android:id="@+id/survey_title"
            android:text="@string/survey_question" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/survey_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp">
        <Button android:id="@+id/survey_option_one"
            android:background="@drawable/button_med_deselected"
            android:text="@string/survey_option_one_label"
            android:onClick="onSurveyButtonClicked"
            style="@style/SurveyOption" />
        <Button android:id="@+id/survey_option_two"
            android:background="@drawable/button_med_deselected"
            android:text="@string/survey_option_two_label"
            android:onClick="onSurveyButtonClicked"
            style="@style/SurveyOption" />
        <Button android:id="@+id/survey_option_three"
            android:background="@drawable/button_med_deselected"
            android:text="@string/survey_option_three_label"
            android:onClick="onSurveyButtonClicked"
            style="@style/SurveyOption" />
        <Button android:id="@+id/survey_option_four"
            android:background="@drawable/button_med_deselected"
            android:text="@string/survey_option_four_label"
            android:onClick="onSurveyButtonClicked"
            style="@style/SurveyOption" />
        <Button android:id="@+id/survey_option_five"
            android:background="@drawable/button_med_deselected"
            android:text="@string/survey_option_five_label"
            android:onClick="onSurveyButtonClicked"
            style="@style/SurveyOption" />
    </LinearLayout>
    <Button android:id="@+id/okButton"
        android:background="@drawable/button_sm_deselected"
        style="@style/okButton"
        android:text="@string/okButton"
        android:onClick="okButtonHandler"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/survey_options" />

</RelativeLayout>
