<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewerSalutation"
            style="@style/TitleText"
            android:text="@string/viewer_info_salutation" />

        <TextView
            android:id="@+id/viewerInfoQuestion"
            style="@style/TitleText"
            android:text="@string/viewer_info_question" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="16"
            android:hint="@string/name"
            android:inputType="textVisiblePassword|textNoSuggestions|textPersonName"
            android:textIsSelectable="false"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="16"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:textIsSelectable="false"
            android:textSize="48sp" />

        <Button
            android:id="@+id/okButton"
            style="@style/okButton"
            android:text="@string/okButton" />

    </LinearLayout>

</LinearLayout>

