<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/admin_title"
        style="@style/TitleText"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_activity_admin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/adminRestartButton"
            style="@style/AdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleRestart"
            android:text="@string/admin_restart_button" />

        <Button
            android:id="@+id/adminUploadButton"
            style="@style/AdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleUpload"
            android:text="@string/admin_upload_button" />

        <Button
            android:id="@+id/adminCancelButton"
            style="@style/AdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCancel"
            android:text="@string/admin_cancel_button" />
    </LinearLayout>

    <Button
        android:id="@+id/adminEditViewers"
        style="@style/AdminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_viewers" />

    <LinearLayout
        android:id="@+id/change_viewer_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Change Viewer Number"
            android:textSize="36sp" />

        <Button
            android:id="@+id/adminChangeViewerNumber2"
            style="@style/AdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="2" />

        <Button
            android:id="@+id/adminChangeViewerNumber3"
            style="@style/AdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="3" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Insert URL for downloading video here" />

            <EditText
                android:id="@+id/videoURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="URL" />

            <Button
                android:id="@+id/download_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Download" />

            <TextView
                android:id="@+id/videoFileSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="File set? No" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Insert URL for downloading subtitle .SRT files here" />

            <EditText
                android:id="@+id/subtitlesURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="URL" />

            <Button
                android:id="@+id/download_subtitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Download" />

            <TextView
                android:id="@+id/subtitlesFileSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="File set? No" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/installationIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:text="@string/installationIdLabel" />

            <TextView
                android:id="@+id/installationIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installationIdValue" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/versionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:text="@string/versionLabel" />

            <TextView
                android:id="@+id/versionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versionValue" />
        </TableRow>
    </TableLayout>
</LinearLayout>
