<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.nullhammer.android.viewersurvey.ViewerNumberActivity"
    android:clickable="false">

    <TextView
        style="@style/TitleText"
        android:text="@string/viewer_number_question"
        android:id="@+id/viewer_number_question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/oneButton"
                android:text="1"
                style="@style/ViewerNumberOption"
                android:clickable="true" />
            <Button
                android:id="@+id/twoButton"
                android:text="2"
                style="@style/ViewerNumberOption"
                android:clickable="true" />
            <Button
                android:id="@+id/threeButton"
                android:text="3"
                style="@style/ViewerNumberOption"
                android:clickable="true" />
        </LinearLayout>

    <Button
        style="@style/LanguageSelector"
        android:id="@+id/languageSelector"
        android:text="@string/language_selector_label"
        android:tag="@string/language_selector_value"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
